- could not reproduce: gfx errors that leaves gaps at connection points on components.
  (see last email with attached screen shot)
- could not reproduce: some components get their connectors moved, thus (1) graphical issues, (2) impossibility of connecting connectors results
- could not reproduce: (from Claus) There are some other gfx glitches, but that might be because I run it in a virtual machine - 
    didn't have them on the previous builds though.
- could not reproduce: 'Scope works well, but doesn't clear 'lines' from other circuits when they are closed. (Y-axis scale would be nice)
- not important for now: new file toolbar button / file menu entry should show the new file dialog;
    it is usable as it is
- fix build on kubuntu 64 bit, for all combinations of installed/not installed state of gpsim/glib
    - when both (gpsim-dev and libglib2.0-dev) are installed or both are uninstalled, then ktechlab compiles and runs fine (kubunt 16.04)
- fixed: when placing a component with slider, and clicking on the slider, the
  slider follows the mouse cursor even after it is released; this is annyoing
* release 0.40.0
- use QMenu instead of Q3PopupMenu
- use QTextEdit instead of K3TextEdit
- fix export as image to not generate black rectangle around exported images
- do not depend ot KDE3 support libraries, only on KDE4 libraries; Qt3Support is still needed
- fix crash on Redo in Pin Map Editor
- fix UI files to not use Q3* functionality
- ported item selector
    - Q3ListView -> QTreeWidget
- ported project manager
    - Q3ListView -> QTreeWidget
- Q3PaintDeviceMetrics -> QPrinter->pageRect()
- canvas.h: split up huge file
- copy the Q3ScrollView into source tree and use that, as internal source code
- use Q3PointArray -> QPolygon
- use Q3ListView -> QTableWidget
- Q3ScrollView -> use internal copy for now
- Q3Hbox -> QWidget, QHBoxLayout
- Q3SimpleRichText -> QTextEdit
- use Q3PtrVector -> QVector< T * >