@@ -170,3 +170,4 @@ Changes between Qt3 and Qt4 port (to be completed)
 - Q3Hbox -> QWidget, QHBoxLayout
 - Q3SimpleRichText -> QTextEdit
 - use Q3PtrVector -> QVector< T * >
+- disable explicit double buffering when drawing; should fix build for OSX
